fixed tests