@@ -3,6 +3,9 @@ plugins {
     id 'java-library'
 }
 
+apply plugin: 'java'
+apply plugin: 'maven-publish'
+
 version = '1.0.0-SNAPSHOT'
 group = 'org.m410.deathvalley'
 
@@ -26,7 +29,7 @@ dependencies {
 }
 
 test {
-    jvmArgs '--illegal-access=deny'
+    jvmArgs '--illegal-access=deny', '--add-opens','java.base/java.lang=ALL-UNNAMED'
     useJUnitPlatform {
         excludeEngines 'junit-vintage'
     }
